# pulse

./: .gitignore  CMakeLists.txt  HOW_TO_APPLY_PATCHES.md  IMPLEMENTATION_GUIDE.md  LICENSE  QUICK_START.md  README.md  REVIEW_FIXES.md  SUMMARY.md  USB_SHELL_GUIDE.md  boards_overlay.patch  conf  create_icon.patch  flash_storage_md.patch  main.c.patch  neai_overlay.ld  prj.conf  pulse_monitor.patch  start_zephyr_env.bat  west.yml
boards/: nucleo_l412rb_p.overlay
docs/: DOCUMENTATION_INDEX.md  flash_storage.md  gui_update_summary.md
hardware/: list_of_hardware_issues.txt
inc/: accelerometer.h  buzzer.h  moving_average.h
lib/nanoedge_ai/: NanoEdgeAI.h
prd/: phm_device_prd.md
scripts/: ICON_GUIDE.md  build_all.bat  build_dfu.bat  build_exe.py  create_icon.py  merge_hex.py  pulse_monitor.py  run_pulse_monitor.bat  test_shell.py
src/: accelerometer.c  buzzer.c  main.c  moving_average.c
